// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Date and time selector examples DefaultDateSelectorDateTimeComponent should render correctly 1`] = `
<div
  id="root0"
>
  <div
    class="v-gap-4 v-flex v-flex-col"
    vflex=""
    vflexcol=""
    vgap="4"
  >
    <label
      class="v-label"
      for="default-date-selector-input"
      id="a-v-label-0"
      v-label=""
    >
      Label
    </label>
    <div
      class="v-input-container v-surface"
      v-input-container=""
    >
      <input
        class="v-input"
        id="default-date-selector-input"
        type="date"
        v-input=""
        value=""
      />
      
    </div>
  </div>
</div>
`;

exports[`Date and time selector examples DefaultRangeDateTimeComponent should render correctly 1`] = `
<div
  id="root1"
>
  <div
    class="v-gap-12 v-flex v-flex-row v-flex-wrap"
    vflex=""
    vflexwrap=""
    vgap="12"
  >
    <div
      class="v-gap-4 v-flex v-flex-col"
      style="flex-basis: 45%;"
      vflex=""
      vflexbasis="45%"
      vflexcol=""
      vgap="4"
    >
      <label
        class="v-label"
        for="date-selector-range-start"
        id="a-v-label-0"
        v-label=""
      >
        Label 1
      </label>
      <div
        class="v-input-container v-surface"
        v-input-container=""
      >
        <input
          class="v-input"
          id="date-selector-range-start"
          max="null"
          type="date"
          v-input=""
          value=""
        />
        
      </div>
    </div>
    <div
      class="v-gap-4 v-flex v-flex-col"
      style="flex-basis: 45%;"
      vflex=""
      vflexbasis="45%"
      vflexcol=""
      vgap="4"
    >
      <label
        class="v-label"
        for="date-selector-range-end"
        id="a-v-label-1"
        v-label=""
      >
        Label 2
      </label>
      <div
        class="v-input-container v-surface"
        v-input-container=""
      >
        <input
          class="v-input"
          id="date-selector-range-end"
          min="null"
          type="date"
          v-input=""
          value=""
        />
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Date and time selector examples DefaultTimeSelectorDateTimeComponent should render correctly 1`] = `
<div
  id="root2"
>
  <div
    class="v-gap-4 v-flex v-flex-col"
    vflex=""
    vflexcol=""
    vgap="4"
  >
    <label
      class="v-label"
      for="default-time-selector-input"
      id="a-v-label-0"
      v-label=""
    >
      Label
    </label>
    <div
      class="v-input-container v-surface"
      v-input-container=""
    >
      <input
        class="v-input"
        id="default-time-selector-input"
        type="time"
        v-input=""
        value=""
      />
      
    </div>
  </div>
</div>
`;

exports[`Date and time selector examples DisabledDateSelectorDateTimeComponent should render correctly 1`] = `
<div
  id="root3"
>
  <div
    class="v-gap-4 v-flex v-flex-col"
    vflex=""
    vflexcol=""
    vgap="4"
  >
    <label
      class="v-label"
      for="disabled-date-selector-input"
      id="a-v-label-0"
      v-label=""
    >
      Label
    </label>
    <div
      class="v-input-container v-surface"
      v-input-container=""
    >
      <input
        class="v-input"
        disabled="disabled"
        id="disabled-date-selector-input"
        type="date"
        v-input=""
        value=""
      />
      
    </div>
  </div>
</div>
`;

exports[`Date and time selector examples DisabledTimeSelectorDateTimeComponent should render correctly 1`] = `
<div
  id="root4"
>
  <div
    class="v-gap-4 v-flex v-flex-col"
    vflex=""
    vflexcol=""
    vgap="4"
  >
    <label
      class="v-label"
      for="disabled-time-selector-input"
      id="a-v-label-0"
      v-label=""
    >
      Label
    </label>
    <div
      class="v-input-container v-surface"
      v-input-container=""
    >
      <input
        class="v-input"
        disabled="disabled"
        id="disabled-time-selector-input"
        type="time"
        v-input=""
        value=""
      />
      
    </div>
  </div>
</div>
`;

exports[`Date and time selector examples InvalidDateSelectorDateTimeComponent should render correctly 1`] = `
<div
  id="root5"
>
  <div
    class="v-gap-4 v-flex v-flex-col"
    vflex=""
    vflexcol=""
    vgap="4"
  >
    <label
      class="v-label"
      for="date-selector-with-error-input"
      id="a-v-label-0"
      v-label=""
    >
      Label (required)
    </label>
    <div
      class="v-input-container v-surface"
      v-input-container=""
    >
      <input
        aria-describedby="date-selector-error-message"
        aria-invalid="false"
        class="v-input"
        id="date-selector-with-error-input"
        required=""
        type="date"
        v-input=""
        value=""
      />
      
    </div>
    <span
      aria-atomic="true"
      aria-live="assertive"
      class="v-input-message"
      id="date-selector-error-message"
      v-input-message=""
    >
      
    </span>
  </div>
  <div
    class="v-gap-16 v-flex v-flex-row"
    vflex=""
    vgap="16"
  >
    <button
      class="v-button v-mt-8"
      type="button"
      v-button=""
      vmt="8"
    >
      Submit
    </button>
    <button
      buttoncolor="secondary"
      class="v-button v-button-secondary v-mt-8"
      type="button"
      v-button=""
      vmt="8"
    >
      Reset
    </button>
  </div>
</div>
`;

exports[`Date and time selector examples InvalidTimeSelectorDateTimeComponent should render correctly 1`] = `
<div
  id="root6"
>
  <div
    class="v-gap-4 v-flex v-flex-col"
    vflex=""
    vflexcol=""
    vgap="4"
  >
    <label
      class="v-label"
      for="time-selector-with-error-input"
      id="a-v-label-0"
      v-label=""
    >
      Label (required)
    </label>
    <div
      class="v-input-container v-surface"
      v-input-container=""
    >
      <input
        aria-describedby="time-selector-error-message"
        aria-invalid="false"
        class="v-input"
        id="time-selector-with-error-input"
        required=""
        type="time"
        v-input=""
        value=""
      />
      
    </div>
    <span
      aria-atomic="true"
      aria-live="assertive"
      class="v-input-message"
      id="time-selector-error-message"
      v-input-message=""
    >
      
    </span>
  </div>
  <div
    class="v-gap-16 v-flex v-flex-row"
    vflex=""
    vgap="16"
  >
    <button
      class="v-button v-mt-8"
      type="button"
      v-button=""
      vmt="8"
    >
      Submit
    </button>
    <button
      buttoncolor="secondary"
      class="v-button v-button-secondary v-mt-8"
      type="button"
      v-button=""
      vmt="8"
    >
      Reset
    </button>
  </div>
</div>
`;

exports[`Date and time selector examples MilitaryTimeSelectorDateTimeComponent should render correctly 1`] = `
<div
  id="root7"
>
  <div
    class="v-gap-4 v-flex v-flex-col"
    vflex=""
    vflexcol=""
    vgap="4"
  >
    <label
      class="v-label"
      for="time-selector-with-24-hour-clock-input"
      id="a-v-label-0"
      v-label=""
    >
      Label
    </label>
    <div
      class="v-input-container v-surface"
      v-input-container=""
    >
      <input
        class="v-input"
        id="time-selector-with-24-hour-clock-input"
        type="time"
        v-input=""
        value=""
      />
      
    </div>
  </div>
</div>
`;

exports[`Date and time selector examples ReadOnlyDateSelectorDateTimeComponent should render correctly 1`] = `
<div
  id="root8"
>
  <div
    class="v-gap-4 v-flex v-flex-col"
    vflex=""
    vflexcol=""
    vgap="4"
  >
    <label
      class="v-label"
      for="read-only-date-selector-input"
      id="a-v-label-0"
      v-label=""
    >
      Label
    </label>
    <div
      class="v-input-container v-surface"
      v-input-container=""
    >
      <input
        class="v-input"
        id="read-only-date-selector-input"
        readonly="readonly"
        type="date"
        v-input=""
        value=""
      />
      
    </div>
  </div>
</div>
`;

exports[`Date and time selector examples ReadOnlyTimeSelectorDateTimeComponent should render correctly 1`] = `
<div
  id="root9"
>
  <div
    class="v-gap-4 v-flex v-flex-col"
    vflex=""
    vflexcol=""
    vgap="4"
  >
    <label
      class="v-label"
      for="read-only-time-selector-input"
      id="a-v-label-0"
      v-label=""
    >
      Label
    </label>
    <div
      class="v-input-container v-surface"
      v-input-container=""
    >
      <input
        class="v-input"
        id="read-only-time-selector-input"
        readonly="readonly"
        type="time"
        v-input=""
        value=""
      />
      
    </div>
  </div>
</div>
`;

exports[`Date and time selector examples StackedRangeDateTimeComponent should render correctly 1`] = `
<div
  id="root10"
>
  <div
    class="v-gap-12 v-flex v-flex-col v-flex-wrap"
    vflex=""
    vflexcol=""
    vflexwrap=""
    vgap="12"
  >
    <div
      class="v-gap-4 v-flex v-flex-col"
      style="flex-basis: 45%;"
      vflex=""
      vflexbasis="45%"
      vflexcol=""
      vgap="4"
    >
      <label
        class="v-label"
        for="stacked-date-selector-range-start"
        id="a-v-label-0"
        v-label=""
      >
        Label 1
      </label>
      <div
        class="v-input-container v-surface"
        v-input-container=""
      >
        <input
          class="v-input"
          id="stacked-date-selector-range-start"
          max="null"
          type="date"
          v-input=""
          value=""
        />
        
      </div>
    </div>
    <div
      class="v-gap-4 v-flex v-flex-col"
      style="flex-basis: 45%;"
      vflex=""
      vflexbasis="45%"
      vflexcol=""
      vgap="4"
    >
      <label
        class="v-label"
        for="stacked-date-selector-range-end"
        id="a-v-label-1"
        v-label=""
      >
        Label 2
      </label>
      <div
        class="v-input-container v-surface"
        v-input-container=""
      >
        <input
          class="v-input"
          id="stacked-date-selector-range-end"
          min="null"
          type="date"
          v-input=""
          value=""
        />
        
      </div>
    </div>
  </div>
</div>
`;
